# lab3_yash_patel

./: .env  .gitignore  DEPLOYMENT.md  LOAD_TEST_RESULT.md  README.md  locustfile.py  pyproject.toml  requirements.txt  train.py
app/: main.py
app/data/: label_encoder.pkl
tests/: test_api.py
